--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -10,8 +10,11 @@ on:
       - master
   workflow_dispatch:
 
+env: 
+  WEBAPP_NAME: 'mcpappsvcdjango'  # Replace with the name of your Azure web app
+
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,7 +34,12 @@ jobs:
       run: pip install -r requirements.txt
       
     # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-    
+    - name: Collect static
+      run: python manage.py collectstatic
+
+    - name: Run tests
+      run: python manage.py test
+
     - name: Upload artifact for deployment jobs
       uses: actions/upload-artifact@v2
       with:
@@ -40,9 +48,9 @@ jobs:
           . 
           !venv/
 
-  deploy:
+  deploy-to-webapp:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-test
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -53,10 +61,32 @@ jobs:
         with:
           name: python-app
           path: .
-      
+
+      - name: Log in to Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL }}
+    
+      - name: Disable static collection and set migration command on App Service
+        uses: Azure/appservice-settings@v1
+        with:  
+          app-name: ${{ env.WEBAPP_NAME }}
+          app-settings-json: '[{ "name": "DISABLE_COLLECTSTATIC", "value": "true" }, { "name": "POST_BUILD_COMMAND",  "value": "python manage.py makemigrations && python manage.py migrate" }, { "name": "SCM_DO_BUILD_DURING_DEPLOYMENT", "value": "true" }, { "name": "DJANGO_ENV", "value": "production"}]'
+
+      # - name: 'Deploy to Azure Web App'
+      #   uses: azure/webapps-deploy@v2
+      #   with:
+      #     app-name: ${{ env.WEBAPP_NAME}}
+      #     slot-name: 'production'
+      #     publish-profile: ${{ secrets.AzureAppService_PublishProfile_1c88022aa5e0442bb949c4da80dc5c02 }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'mcpappsvcdjango'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_1c88022aa5e0442bb949c4da80dc5c02 }}
+          app-name: ${{ env.WEBAPP_NAME}}
+
+      # - name: 'Deploy to Azure Web App'
+      #   uses: azure/webapps-deploy@v2
+      #   with:
+      #     app-name: ${{ env.WEBAPP_NAME}}
+      #     slot-name: 'production'
