--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Log in to Azure CLI
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
     
       - name: Disable static collection and set migration command on App Service
         uses: Azure/appservice-settings@v1
