--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -15,8 +15,9 @@ env:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
-
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
+    
     steps:
     - uses: actions/checkout@v2
 
