--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -16,7 +16,8 @@ env:
 jobs:
   build-and-test:
     #runs-on: ubuntu-latest
-    runs-on: self-hosted
+    #runs-on: self-hosted
+    runs-on: myUbuntuVM
     
     steps:
     - uses: actions/checkout@v2
