--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -16,8 +16,7 @@ env:
 jobs:
   build-and-test:
     #runs-on: ubuntu-latest
-    #runs-on: self-hosted
-    runs-on: myUbuntuVM
+    runs-on: self-hosted
     
     steps:
     - uses: actions/checkout@v2
