--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -21,10 +21,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python version
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.7'
+    #- name: Set up Python version
+    #  uses: actions/setup-python@v1
+    #  with:
+    #    python-version: '3.7'
 
     - name: Create and start virtual environment
       run: |
