--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -26,11 +26,16 @@ jobs:
       with:
         python-version: '3.7'
 
+    #- name: Create and start virtual environment
+    #  run: |
+    #    python -m venv venv
+    #    source venv/bin/activate
+
     - name: Create and start virtual environment
       run: |
         python -m venv venv
-        source venv/bin/activate
-    
+        venv/bin/activate
+
     - name: Install dependencies
       run: pip install -r requirements.txt
       
