--- a/.github/workflows/master_mcpappsvcdjango.yml
+++ b/.github/workflows/master_mcpappsvcdjango.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Create and start virtual environment
       run: |
         python -m venv venv
-        venv/bin/activate
+        venv/scripts/activate
 
     - name: Install dependencies
       run: pip install -r requirements.txt
